add background image

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Pages#index</h1>
 
-<%= react_component("Pages", props: @pages_props) %>
+<div class='landingPage'> 
+  <%= react_component("Pages") %>
+</div>
+
+
+
+<!-- , props: @pages_props -->
 
 
