--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  margin:0;
+  padding:0;
+  height:100%;
+}
+
+.landingPage  {
+  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('/assets/CoverPhoto.JPG');
+  height: 100%;
+  max-height: 100%;
+  overflow: auto;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
