add buttons to landing page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,44 @@
 
 <div class='landingPage'> 
-  <%= react_component("Pages") %>
+
+  <div class='title'>
+      <h1>Marco Genova </h1>
+      <h2>Software Engineer </h2>
+   
+    <div class='buttons'>
+      <div class='row'>
+        
+        <div class='col-lg-4'>
+          <button onclick="location.href='/portfolio'" class='myButt one'>
+            <div class='insider'></div>
+              Portfolio
+          </button>
+        </div>
+
+        <div class='col-lg-4'>
+          <button class='myButt two'>
+            <div class='insider'></div>
+              &nbspAbout&nbsp
+          </button>
+        </div>
+
+        <div class='col-lg-4'>
+          <button class='myButt one'>
+            <div class='insider'></div>
+              Resume
+          </button>
+        </div>
+
+      </div>
+    </div>
+
+   </div>  
+
 </div>
 
 
 
-<!-- , props: @pages_props -->
+
+
 
 
