--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,11 +13,11 @@
  *= require_tree .
  *= require_self
  */
-
 html, body {
   margin:0;
   padding:0;
   height:100%;
+  font-family:Helvetica,sans-serif;
 }
 
 .landingPage  {
@@ -26,7 +26,42 @@ html, body {
   max-height: 100%;
   overflow: auto;
   background-size: cover;
-  background-attachment: fixed;
   background-position: center;
 }
+
+.navbar {
+  background:transparent;
+  border: 0px !important; 
+}
+
+.nav a {
+  color: #E0CB77 !important;
+  font-size: 20px;
+}
+.nav a:hover {
+  color: #7b604d !important;
+}
+
+.title h1 {
+  font-size: 60px;
+}
+
+.title {
+  color:white;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.buttons {
+  display: flex;   
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
