--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,3 +2,96 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$red:#E0CB77;
+@mixin transition($in) {
+  transition:$in;
+  -webkit-transition:$in;
+  -moz-transition:$in;
+  -o-transition:$in;
+  -ms-transition:$in;
+}
+@mixin transform($in) {
+  transform:$in;
+  -webkit-transform:$in;
+  -moz-transform:$in;
+  -o-transform:$in;
+  -ms-transform:$in;
+}
+@mixin animation($in) {
+  animation:$in;
+  -webkit-animation:$in;
+  -moz-animation:$in;
+  -o-animation:$in;
+  -ms-animation:$in;
+}
+
+.myButt {
+  outline:none;
+  border:none;
+  padding:20px;
+  display:block;
+  margin:50px auto;
+  cursor:pointer;
+  font-size:20px;
+  background-color:transparent;
+  position:relative;
+  border:2px solid #fff;
+
+  @include transition(all 0.5s ease);
+}
+
+
+// ################ ONE
+
+.one {
+  border-color:#fff;
+  overflow:hidden;
+  color:#fff;
+
+  .insider {
+    background-color:#fff;
+    width:100%;
+    height:20px;
+    position:absolute;
+    left:-135px;
+
+    @include transform(rotateZ(45deg));
+  }
+
+  &:hover {
+    background-color:$red;
+    border-color:#fff;
+    color:#fff;
+
+    .insider {
+      @include transition(all 0.3s ease);
+      left:135px;
+    }
+  }
+}
+
+// ################ TWO
+
+.two {
+  color:#fff;
+
+  &:hover {
+    border-color:$red;
+    color:$red;
+
+    @include animation(shakeThatBooty 0.3s linear 1);   
+  }
+}
+
+@keyframes shakeThatBooty {
+  33% {
+    @include transform(rotateZ(10deg));
+  }
+  67% {
+    @include transform(rotateZ(-10deg));
+  }
+  100% {
+    @include transform(rotateZ(10deg));
+  }
+}
+
