--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,15 +31,15 @@ html, body {
 
 .navbar {
   background:transparent;
-  border: 0px !important; 
 }
 
 .nav a {
-  color: #E0CB77 !important;
   font-size: 20px;
+  color: black !important;
 }
+
 .nav a:hover {
-  color: #7b604d !important;
+  color: #E0CB77 !important;
 }
 
 .title h1 {
@@ -62,6 +62,15 @@ html, body {
   align-items: center;
 }
 
+.myWorks .well {
+  border-radius: 0px !important;
+  border: 0px !important;
+  height: 270px;
+  margin: 0px !important;
+
+  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('/assets/CoverPhoto.JPG');
+  background-size: cover;
+}
 
 
 
