add page laod spinner

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-$red:#E0CB77;
+$red:#49e2d6;
 @mixin transition($in) {
   transition:$in;
   -webkit-transition:$in;
