--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,16 @@
+
 <div class='header'>
   <h1> My Works </h1>
 </div>
+<hr> 
 
-<div class='myWorks'>
+<div> 
+  <h4> View all Projects on my GitHub! </h4>
+</div>
+
+<hr> 
+<div class="spinner">Loading...</div>
+<div class='myWorks pageLoad'>
   <div className='row'>
     <%= react_component("Portfolio") %> 
   </div>
