--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -29,7 +29,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="portfolio">Portfolio</a></li>
           <li><a href="#">Resume</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
